k8s/deploy.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: uni-grant
  namespace: uni-ns
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: noel-ns
  to:
    - group: ""
      kind: Service


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uni-deploy
  namespace: uni-ns
  labels:
    app: uni
spec:
  replicas: 2
  selector:
    matchLabels:
      app: uni
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: uni
    spec:
      containers:
        - name: uni-container
          image: nmc9812/uni:v1.1.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"

---


apiVersion: v1
kind: Service
metadata:
  name: uni-service
  namespace: uni-ns
spec:
  selector:
    app: uni
  ports:
    - port: 83
      targetPort: 3000
  type: NodePort
